--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>React Starter</title>
-    <link href="http://thomasf.github.io/solarized-css/solarized-dark.min.css" rel="stylesheet"></link>
+    <link href="solarized-dark.min.css" rel="stylesheet"></link>
   </head>
   <body>
     <div id="root"></div>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="thrift.js"></script>
     <script src="../dist/bundle.js"></script>
   </body>
 </html>
