--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React Starter</title>
+    <title>Hraesvelgr</title>
     <link href="solarized-dark.min.css" rel="stylesheet"></link>
   </head>
   <body>
